--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.Extensions.OData.V3Client.Abstractions.Release.nuspec
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
     <metadata>
-        <id>Microsoft.OData.Extensions.Client.Abstractions</id>
-        <title>Microsoft Extensions OData Client.Abstractions</title>
+        <id>Microsoft.OData.Extensions.V3Client.Abstractions</id>
+        <title>Microsoft Extensions V3 OData Client.Abstractions</title>
         <version>1.0.0</version>
-        <authors>Microsoft</authors>        
+        <authors>Microsoft</authors>
         <copyright>&#169; Microsoft Corporation. All rights reserved.</copyright>
         <description>This package contains the abstract codes you need to create OData v3 client.</description>
         <summary>This package contains the abstract codes you need to create OData v3 client.</summary>
