--- a/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Release.nuspec
+++ b/src/Microsoft.OData.Extensions.Client/Microsoft.Extensions.OData.V3Client.Release.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Microsoft.OData.Extensions.V3Client</id>
         <title>Microsoft Extensions OData Client</title>
-        <version>1.0.1</version>
+        <version>$VersionNuGetSemantic$</version>
         <authors>Microsoft</authors>
         <copyright>&#169; Microsoft Corporation. All rights reserved.</copyright>
         <description>This package contains the codes you need to create OData client.</description>
@@ -17,7 +17,7 @@
           <dependency id="Microsoft.Extensions.DependencyInjection" version="$ExtensionsDependencyInjectionDependency$" />
           <dependency id="Microsoft.Extensions.Options" version="$ExtensionsOptionsDependency$" />
           <dependency id="Microsoft.Extensions.Http" version="$ExtensionsHttpDependency$" />
-          <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionFullSemantic$-Nightly$NightlyBuildVersion$]" />
+          <dependency id="Microsoft.OData.Extensions.V3Client.Abstractions" version="[$VersionNuGetSemantic$]" />
         </dependencies>
     </metadata>
   <files>
