--- a/tools/WebStack.versions.settings.targets
+++ b/tools/WebStack.versions.settings.targets
@@ -6,7 +6,7 @@
     <VersionMajor Condition="'$(VersionMajor)' == ''">1</VersionMajor>
     <VersionMinor Condition="'$(VersionMinor)' == ''">0</VersionMinor>
     <VersionBuild Condition="'$(VersionBuild)' == ''">1</VersionBuild>
-    <VersionRelease Condition="'$(VersionRelease)' == ''">beta0</VersionRelease>
+    <VersionRelease Condition="'$(VersionRelease)' == ''"></VersionRelease>
   </PropertyGroup>
 
   <!-- For NuGet Package Dependencies -->
